2006-04-17  Florian Boor <florian@kernelconcepts.de>

    * colordialog.c: Terminate button list, fix includes.
      Check if colour was allocated successfully. 

2006-04-15  Florian Boor <florian@kernelconcepts.de>

    * Makefile.am: Add new files.
    * colordialog.*: Shiny new GPE colour selection dialog.
    * color-slider.*: New files incuding a new slider widget with coloured 
      background. Derived from the old GtkWidget SpColorSlider by 
      Lauris Kaplinski.

2006-03-20  Florian Boor <florian@kernelconcepts.de>

    * pixmaps.c (gpe_icon_free_dynamic): New destructor function.
      (gpe_load_icons, gpe_try_find_icon): Use destructor function.

2006-03-20  Florian Boor <florian@kernelconcepts.de>

    * pixmaps.c (gpe_load_icons): Use glib function to determine homedir.
      Support calling this function multiple times:
      - Clear pblist if already initialized.
      - Set destructor function to pixbufs.
      (gpe_set_theme), (gpe_find_icon_scaled_free): New functions.
      (gpe_load_one_icon): Try loading from default icon locations (like
      /usr/share/pixmaps and PREFIX /share/pixmaps) too.
    * pixmaps.h: Add new functions (gpe_set_theme, gpe_find_icon_scaled_free)
    * pixmaps.c, pixmaps.h: Use compatible but more portable gchar instead 
      of char data type.
    * pixmaps.sgml: Fix typo.
    * Makefile.am: Remove obsolete gpe-iconlist stuff.
    * gpewindowlist.sgml: Add some documentation.
    * gpewindowbits.c: Document gpe_get_window_icon().

2006-03-01  Florian Boor <florian@kernelconcepts.de>

	* Version 0.110 released.
	* doc/libgpewidget-docs.sgml: Change license of documentation to
          become the same like library license (LGPL).

2006-02-04  Phil Blundell  <pb@reciva.com>

	* Version 0.109 released.

2006-02-04  Phil Blundell  <pb@reciva.com>

	* gpetimesel.c (struct _GpeTimeSelClass): Add "changed", "clock".
	(gpe_time_sel_emit_changed): New function.
	(note_change): Likewise.